@@ -5,6 +5,7 @@ import static com.bitetogether.common.util.SecurityUtils.getCurrentUserId;
 import static com.bitetogether.common.util.SecurityUtils.hasRole;
 
 import com.bitetogether.common.dto.ApiResponse;
+import com.bitetogether.common.dto.PaginationRequest;
 import com.bitetogether.common.enums.ApiResponseStatus;
 import com.bitetogether.common.enums.Role;
 import com.bitetogether.common.exception.AppException;
@@ -16,11 +17,13 @@ import com.bitetogether.user.repository.UserRepository;
 import com.bitetogether.user.service.FriendService;
 import com.bitetogether.user.util.UserHelper;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -29,22 +32,26 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class FriendServiceImpl implements FriendService {
-  UserRepository userRepository;
   UserMapper userMapper;
   UserHelper userHelper;
+  UserRepository userRepository;
 
   @Override
-  public ApiResponse<List<FriendResponse>> getFriendsList() {
+  public ApiResponse<List<FriendResponse>> getFriendsList(PaginationRequest paginationRequest) {
     Long currentUserId = getCurrentUserId();
 
-    User currentUser = userHelper.findUserById(currentUserId);
-    List<User> friends = currentUser.getFriendList();
+    Pageable pageable = PageRequest.of(paginationRequest.getPage(), paginationRequest.getSize());
+    Page<User> friendPage = userRepository.getFriendsByUserId(currentUserId, pageable);
 
-    List<FriendResponse> friendResponseList =
-        friends.stream().map(userMapper::toFriendResponse).collect(Collectors.toList());
+    List<FriendResponse> friends = friendPage.stream().map(userMapper::toFriendResponse).toList();
 
     return buildApiResponse(
-        ApiResponseStatus.SUCCESS, "Friend list retrieved successfully", friendResponseList);
+        ApiResponseStatus.SUCCESS,
+        "Friend list retrieved successfully",
+        friends,
+        friendPage.getNumber(),
+        friendPage.getTotalPages(),
+        friendPage.getTotalElements());
   }
 
   @Override
@@ -54,11 +61,7 @@ public class FriendServiceImpl implements FriendService {
     User currentUser = userHelper.findUserById(currentUserId);
     User friendToRemove = validateDeleteFriendRequest(friendId, currentUser);
 
-    currentUser.getFriendList().remove(friendToRemove);
-    friendToRemove.getFriendList().remove(currentUser);
-
-    userRepository.save(currentUser);
-    userRepository.save(friendToRemove);
+    deleteFriendship(currentUser, friendToRemove);
 
     return buildApiResponse(ApiResponseStatus.SUCCESS, "Friend removed successfully", null);
   }
@@ -67,14 +70,20 @@ public class FriendServiceImpl implements FriendService {
     User friendUser = userHelper.findFriendById(friendId);
 
     if (hasRole(Role.USER.name())) {
-      boolean areFriends =
-          currentUser.getFriendList().stream().anyMatch(friend -> friend.getId().equals(friendId));
-
-      if (!areFriends) {
+      boolean isFriended = currentUser.getFriends().contains(friendUser);
+      if (!isFriended) {
         throw new AppException(ErrorCode.FRIEND_NOT_FOUND);
       }
     }
 
     return friendUser;
+  }
+
+  void deleteFriendship(User user1, User user2) {
+    user1.getFriends().remove(user2);
+    user2.getFriends().remove(user1);
+
+    userHelper.saveUser(user1);
+    userHelper.saveUser(user2);
   }
 }
